css/default.css
@charset "UTF-8";

/* Fonts: loaded in fonts.css */
/* General desktop/mobile: loaded in initial.css */
/* default.css: contains everything else, like drop caps, link icons, tables, etc */

/**********/
/* COLORS */
/**********/
/* colors are now in /static/css/colors.css or dark-mode.css */

/*******************/
/* OTHER VARIABLES */
/*******************/

:root {
    --GW-sidenotes-max-width: 550px;

    --GW-popups-popup-max-width: 640px;
    --GW-popups-popup-max-height: 480px;
    --GW-popups-popup-with-title-bar-min-width: 320px;
    --GW-popups-annotation-popup-min-width: 360px;
    --GW-popups-annotation-popup-min-height: 120px;
    --GW-popups-aux-links-popup-min-width: 360px;
    --GW-popups-aux-links-popup-min-height: 120px;
    --GW-popups-local-transclude-popup-min-width: 360px;
    --GW-popups-local-transclude-popup-min-height: 120px;
    --GW-popups-popup-border-width: 3px;
    --GW-popups-popup-title-bar-height: calc(1.5rem + 1px);
    --GW-popups-popup-mini-title-bar-height: calc(1rem + 1px);
    --GW-popups-video-iframe-width: 495px;
    --GW-popups-video-iframe-height: 310px;
    --GW-popups-image-popup-min-size: 64px;

    --GW-popins-popin-max-height: 50vh;
    --GW-popins-popin-min-height: 120px;
    --GW-popins-popin-border-width: 3px;
    --GW-popins-popin-title-bar-height: 1.75rem;
    --GW-popins-popin-footer-bar-height: 1.75rem;
}

/*********************/
/* ARTICLE CONTAINER */
/*********************/

/*  (ie. article) */
/*  Nothing!
    */

/************/
/* SECTIONS */
/************/
/*  Use: annotate collapsible section headers with '{.collapse}' (in the Markdown);
    for sections where I want a summary/abstract of that (eg. in Notes.page/Statistical-notes.page),
    one annotate summaries to keep uncollapsed with '<div class="abstract-collapse">summary</div>'.
    (Pandoc Markdown does support a native div syntax, but it's long and ugly.)
    */

.collapse {
    min-height: 4.5rem;
    position: relative;
    overflow: hidden;
    padding: 0 0 2rem 0;
    box-sizing: border-box;
    margin: 1em 0;
}
.collapse:not(.expanded) > .disclosure-button ~ :not(.abstract-collapse) {
    max-height: 0;
    min-height: unset;
    overflow: hidden;
    padding: 0;
    margin: 0;
    border: none;
}
.collapse.expanded {
    overflow: visible;
}

/*  Collapse summary.
    */
.collapse .abstract-collapse {
    margin: 0;
    position: relative;
    z-index: 1;
}
.collapse .abstract-collapse.abstract {
    margin-left: calc(-0.5em - 2px);
}
.collapse .abstract-collapse:not(.abstract) {
    margin: 1.5em 0 0.25em 0;
}
.collapse.expanded > .abstract-collapse:not(.abstract) {
    margin-bottom: 0;
}
.collapse:not(.expanded) > .abstract-collapse {
    pointer-events: none;
    position: relative;
    z-index: 3;
}
.collapse:not(.expanded) > .abstract-collapse blockquote {
    margin: 0;
}
.collapse:not(.expanded) > .disclosure-button:hover + .abstract-collapse blockquote {
    background-color: var(--GW-collapse-summary-blockquote-hover-color);
}

/*  Disclosure button.
    */
.disclosure-button {
    -webkit-appearance: none;
    -moz-appearance: none;
    cursor: pointer;
    margin: 0;
    position: absolute;
    top: 0;
    right: 0;
    width: 100%;
    height: 100%;
    font-weight: inherit;
    font-style: inherit;
    font-size: 0.875em;
    font-family: var(--GW-sans-serif-font-stack);
    box-shadow:
        0.5em 0 0 0 var(--GW-collapse-disclosure-button-color) inset;
    transition:
        box-shadow 0.1s ease;
}
.disclosure-button:hover {
    z-index: 1;
    box-shadow:
        0.5em 0 0 0 var(--GW-collapse-disclosure-button-hover-color) inset;
}
.disclosure-button:checked {
    pointer-events: none;
    background-color: transparent;
}
.disclosure-button:focus {
    outline: none;
}

/*  Top and bottom parts of disclosure button.
    */
.disclosure-button::before,
.disclosure-button::after {
    background-color: var(--GW-collapse-disclosure-button-color);
    transition:
        color 0.1s ease,
        background-color 0.1s ease;
}
.disclosure-button:hover::before,
.disclosure-button:hover::after {
    background-color: var(--GW-collapse-disclosure-button-hover-color);
}
.disclosure-button:checked::before,
.disclosure-button:checked::after {
    pointer-events: auto;
}

/*  Top part of disclosure button.
    */
.disclosure-button::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 3rem;
    text-align: right;
    color: var(--GW-collapse-disclosure-button-top-part-text-color);
    padding: 0.875rem 3rem;
    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z" fill="%23CCC"/></svg>');
    background-repeat: no-repeat;
    background-position: calc(100% - 1rem) 0.625rem;
    background-size: auto 1.5rem;
    box-sizing: border-box;
}
.disclosure-button:hover::before {
    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z" fill="%23FFF"/></svg>');
    color: var(--GW-collapse-disclosure-button-text-hover-color);
}
/* ... */

